# python-template

./: .coverage  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  GETTING_STARTED.md  docker-compose.yml  main.py  requirements.txt  settings.py
.claude/: settings.json
alembic/: env.py
certs/: generate_self_signed_cert.py  key.pem
core/: container.py  dependencies.py  settings.py
mcp_routers/: prompts.py  resources.py  tools.py
performance/: flight_cache.js  load.js  smoke.js  stress.js
performance/data/: clickhouse-init.sql  (+1 more)
python-template/: CLAUDE.md  GETTING_STARTED.md  docker-compose.yml  main.py  requirements.txt  settings.py
python-webservice-template/: .dockerignore  .env.example  CLAUDE.md  docker-compose.yml  main.py  pytest.ini  requirements.txt  settings.py  test_run_output.txt
routers/: cache.py  config.py  data.py  health.py
rust-template/: Cargo.toml
rust-template/src/: app.rs  config.rs  lib.rs  main.rs  openapi.rs
rust-template/src/mcp/: mod.rs  tools.rs
rust-template/src/routers/: data.rs
rust-template/tests/: test_mcp.rs
schemas/: cache.py  config.py  data.py  health.py
scripts/: clickhouse-init.sql  postgres-init.sql  test_mcp_discovery.py
services/: cache.py  config.py  data.py  flight_cache.py  health.py
tests/: conftest.py  flight_helpers.py  test_cache.py  test_config.py  test_data.py  test_example_server.py  test_examples.py  test_flight_cache.py  test_flight_client.py  test_flight_merge.py  test_flight_service.py  test_health.py  test_lsm_store.py  test_mcp.py  test_settings.py
(+115 files in other folders)
