[package]
name    = "rust-template"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_template"
path = "src/lib.rs"

[[bin]]
name = "rust-template"
path = "src/main.rs"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
envy               = "0.4"
polars             = { version = "0.44", features = ["ipc_streaming"] }
rmcp               = { version = "1", features = ["server", "transport-streamable-http-server"] }
utoipa             = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui  = { version = "7", features = ["axum"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower          = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
axum-test      = "14"
